--- a/Dia5/index.html
+++ b/Dia5/index.html
@@ -10,7 +10,9 @@
     <h1 id="quien-esta-viendo">¿Quién está viendo ahora?</h1>
     <div class="contenedor-perfiles">
       <div class="cada-perfil">
-        <button id="perfil-tarjeta" class="perfil1"></button>
+        <button id="perfil-tarjeta" class="perfil1">
+          <a href="./home.html" class="redirect"></a>
+        </button>
         <h3 class="perfil-nombre">Perfil 1</h3>
       </div>
       <div class="cada-perfil">
